# chess-tube-analyzer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ChessVideoExtractor.cpp  PROJECT_PLAN.md  README.md  SPEC.md  TODO.md  agents.md  architecture.md  extractor.py  phase1_extract_moves.py  test_extractor.py  test_video_extractor.py  video_extractor.py
assets/sample_games_full/game_1/: game.pgn
assets/sample_games_medium/: game.pgn
assets/sample_games_short/7 plies/: game.pgn
cpp/: CMakeLists.txt
cpp/include/: ChessVideoExtractor.h  FramePrefetcher.h  MainWindow.h  PgnWriter.h  UIDetectors.h  VideoProcessorWorker.h
cpp/src/: ArrowDetector.cpp  BoardAnalysis.cpp  BoardLocalizer.cpp  ChessVideoExtractor.cpp  ClockRecognizer.cpp  FramePrefetcher.cpp  GPUAccelerator.cpp  MainWindow.cpp  PgnWriter.cpp  UIDetectors.cpp  VideoProcessorWorker.cpp  main.cpp  main_gui.cpp
cpp/tests/: test_ui_detectors.cpp
docs/: USAGE.md
include/: AnalysisVideoGenerator.h  AnalysisVideoRenderUtils.h  ArrowDetector.h  BoardAnalysis.h  BoardLocalizer.h  ChessFenUtils.h  ChessVideoExtractor.h  ClockRecognizer.h  FFmpegFilterGraph.cpp  FFmpegFilterGraph.h  FramePrefetcher.h  GPUAccelerator.h  ImageWriteUtils.h  MainWindow.h  MoveVerifier.h  OverlayEditorDialog.h  PgnWriter.h  ProcessingSettings.h  RevertDetector.h  ScopedTimer.h  SettingsDialog.h  StockfishAnalyzer.h  TemplateManager.h  ThemeManager.h  ToggleSwitch.h  VideoOverlayConfig.h  VideoProcessorWorker.h
src/: AnalysisVideoGenerator.cpp  AnalysisVideoRenderUtils.cpp  ArrowDetector.cpp  BoardAnalysis.cpp  BoardLocalizer.cpp  ChessFenUtils.cpp  ChessVideoExtractor.cpp  ClockRecognizer.cpp  ExtractorUtils.cpp  ExtractorUtils.h  FramePrefetcher.cpp  GPUAccelerator.cpp  ImageWriteUtils.cpp  MainWindow.cpp  MainWindow_Settings.cpp  MainWindow_UI.cpp  MoveValidations.cpp  MoveValidations.h  MoveVerifier.cpp  OverlayEditorDialog.cpp  PgnWriter.cpp  RevertDetector.cpp  SettingsDialog.cpp  StockfishAnalyzer.cpp  TemplateManager.cpp  ThemeManager.cpp  ToggleSwitch.cpp  VideoProcessorWorker.cpp  agadmator.json  almighty-chess.json  biyaherong-chess-coach.json  chess-com.json  chess-king.json  chess-talk.json  chess-teacher.json  chess-vibes.json  coffee-chess.json  duj-chess.json  fide-chess.json  freestyle-chess.json  (+16 more)
tests/: run_tests.py  test_ui_detectors.cpp
